==> FASTSHIFT/Arduino-For-Keil/_Keilduino (AT32F4xx)/Core/timer.c <==
#include "timer.h"

void Timer_ClockCmd(TIM_TypeDef* TIMx, FunctionalState NewState)
{
    if(TIMx == TIM1)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR1, NewState);
    }
    else if(TIMx == TIM2)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR2, NewState);
    }
    else if(TIMx == TIM3)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR3, NewState);
    }
    else if(TIMx == TIM4)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR4, NewState);
    }
    else if(TIMx == TIM5)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR5, NewState);
    }
    else if(TIMx == TIM6)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR6, NewState);
    }
    else if(TIMx == TIM7)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR7, NewState);
    }
    else if(TIMx == TIM8)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR8, NewState);
    }
    else if(TIMx == TIM9)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR9, NewState);
    }
    else if(TIMx == TIM10)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR10, NewState);
    }
    else if(TIMx == TIM11)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR11, NewState);
    }
    else if(TIMx == TIM12)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR12, NewState);
    }
    else if(TIMx == TIM13)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR13, NewState);
    }
    else if(TIMx == TIM14)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR14, NewState);
    }
    else if(TIMx == TIM15)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR15, NewState);
    }
}

void Timer_SetInterrupt(TIM_TypeDef* TIMx, uint32_t time, Timer_CallbackFunction_t function)
{
    uint16_t period, prescaler;
    uint32_t clock = F_CPU / 2;
    
    if(!IS_TMR_ALL_PERIPH(TIMx) || time == 0)
        return;
    
    /*将定时中断时间转换为重装值和时钟分频值*/
    Timer_TimeToArrPsc(
        time,
        clock,
        &period, 
        &prescaler
    );
    
    /*定时中断配置*/
    Timer_SetInterruptBase(
        TIMx, 
        period,
        prescaler,
        function, 
        Timer_PreemptionPriority_Default, 
        Timer_SubPriority_Default
    );
}

void Timer_SetInterruptFreqUpdate(TIM_TypeDef* TIMx, uint32_t freq)
{
    uint16_t period, prescaler;
    uint32_t clock = F_CPU / 2;
    
    if(!IS_TMR_ALL_PERIPH(TIMx) || freq == 0)
        return;

    Timer_FreqToArrPsc(
        freq, 
        clock,
        &period, 
        &prescaler
    );
    TMR_SetAutoreload(TIMx, period - 1);
    TMR_DIVConfig(TIMx, prescaler - 1, TMR_DIVReloadMode_Immediate);
}

uint32_t Timer_GetClockOut(TIM_TypeDef* TIMx)
{
    uint32_t clock = F_CPU / 2;
    if(!IS_TMR_ALL_PERIPH(TIMx))
        return 0;

    return (clock / ((TIMx->AR + 1) * (TIMx->DIV + 1)));
}

void Timer_SetInterruptTimeUpdate(TIM_TypeDef* TIMx, uint32_t time)
{
    uint16_t period, prescaler;
    uint32_t clock = F_CPU / 2;

    if(!IS_TMR_ALL_PERIPH(TIMx))
        return;

    Timer_TimeToArrPsc(
        time,
        clock,
        &period, 
        &prescaler
    );

    TMR_SetAutoreload(TIMx, period - 1);
    TMR_DIVConfig(TIMx, prescaler - 1, TMR_DIVReloadMode_Immediate);
}

void Timer_SetInterruptBase(
    TIM_TypeDef* TIMx, 
    uint16_t period, uint16_t prescaler, 
    Timer_CallbackFunction_t function, 
    uint8_t PreemptionPriority, uint8_t SubPriority
)
{
    TMR_TimerBaseInitType  TMR_TimeBaseStructure;
    NVIC_InitType NVIC_InitStructure;
    uint8_t TMRx_IRQn;
    TIMER_Type TIMERx;

    if(!IS_TMR_ALL_PERIPH(TIMx))
        return;

#define TMRx_IRQ_DEF(n,x_IRQn)\
do{\
    if(TIMx == TIM##n)\
    {\
        TIMERx = TIMER##n;\
        TMRx_IRQn = x_IRQn;\
    }\
}\
while(0)
    
    TMRx_IRQ_DEF(1, TMR1_OV_TMR10_IRQn);
    TMRx_IRQ_DEF(2, TMR2_GLOBAL_IRQn);
    TMRx_IRQ_DEF(3, TMR3_GLOBAL_IRQn);
    TMRx_IRQ_DEF(4, TMR4_GLOBAL_IRQn);
    TMRx_IRQ_DEF(5, TMR5_GLOBAL_IRQn);
    TMRx_IRQ_DEF(6, TMR6_GLOBAL_IRQn);
    TMRx_IRQ_DEF(7, TMR7_GLOBAL_IRQn);
    TMRx_IRQ_DEF(8, TMR8_OV_TMR13_IRQn);
    TMRx_IRQ_DEF(9, TMR1_BRK_TMR9_IRQn);
    TMRx_IRQ_DEF(10, TMR1_OV_TMR10_IRQn);
    TMRx_IRQ_DEF(11, TMR1_TRG_HALL_TMR11_IRQn);
    TMRx_IRQ_DEF(12, TMR8_BRK_TMR12_IRQn);
    TMRx_IRQ_DEF(13, TMR8_OV_TMR13_IRQn);
    TMRx_IRQ_DEF(14, TMR8_TRG_HALL_TMR14_IRQn);
    TMRx_IRQ_DEF(15, TMR15_OV_IRQn);

    if(TMRx_IRQn == 0)
        return;

    /*register callback function*/
    TIMx_Function[TIMERx] = function;

    /*Enable PeriphClock*/
    TMR_Reset(TIMx);
    Timer_ClockCmd(TIMx, ENABLE);

    TMR_TimeBaseStructure.TMR_RepetitionCounter = 0;
    TMR_TimeBaseStructure.TMR_Period = period - 1;         //设置在下一个更新事件装入活动的自动重装载寄存器周期的值
    TMR_TimeBaseStructure.TMR_DIV = prescaler - 1;  //设置用来作为TIMx时钟频率除数的预分频值  10Khz的计数频率
    TMR_TimeBaseStructure.TMR_ClockDivision = TMR_CKD_DIV1;     //设置时钟分割:TDTS = Tck_tim
    TMR_TimeBaseStructure.TMR_CounterMode = TMR_CounterDIR_Up;  //TIM向上计数模式
    TMR_TimeBaseStructure.TMR_Plus = TMR_Plus_Enable;
    TMR_TimeBaseInit(TIMx, &TMR_TimeBaseStructure); //根据TIM_TimeBaseInitStruct中指定的参数初始化TIMx的时间基数单位
    
    /**********************************设置中断优先级************************************/
    NVIC_InitStructure.NVIC_IRQChannel = TMRx_IRQn;  //TIM中断
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = PreemptionPriority;  //先占优先级
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = SubPriority;  //从优先级
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; //IRQ通道被使能
    NVIC_Init(&NVIC_InitStructure);  //根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器

    TMR_ClearFlag(TIMx, TMR_FLAG_Update);
    TMR_INTConfig(TIMx, TMR_INT_Overflow, ENABLE);  //使能TIM中断
}
