==> FASTSHIFT/Arduino-For-Keil/Keilduino/Platform/AT32F43x/Core/timer.c <==
#include "timer.h"
#include "gpio.h"

void Timer_ClockCmd(tmr_type* TIMx, bool Enable)
{
    int index;
    typedef struct
    {
        tmr_type* tmr;
        crm_periph_clock_type crm_periph_clock;
    } crm_tmr_clock_map_t;

#   define CLOCK_MAP_DEF(n) {TMR##n, CRM_TMR##n##_PERIPH_CLOCK}

    static const crm_tmr_clock_map_t clock_map[] =
    {
        CLOCK_MAP_DEF(1),
        CLOCK_MAP_DEF(2),
        CLOCK_MAP_DEF(3),
        CLOCK_MAP_DEF(4),
        CLOCK_MAP_DEF(5),
        CLOCK_MAP_DEF(6),
        CLOCK_MAP_DEF(7),
        CLOCK_MAP_DEF(8),
        CLOCK_MAP_DEF(9),
        CLOCK_MAP_DEF(10),
        CLOCK_MAP_DEF(11),
        CLOCK_MAP_DEF(12),
        CLOCK_MAP_DEF(13),
        CLOCK_MAP_DEF(14),
        CLOCK_MAP_DEF(20)
    };

    for(index = 0; index < sizeof(clock_map) / sizeof(crm_tmr_clock_map_t); index++)
    {
        if(TIMx == clock_map[index].tmr)
        {
            crm_periph_clock_enable(clock_map[index].crm_periph_clock, Enable ? TRUE : FALSE);
        }
    }
}

void Timer_SetInterrupt(tmr_type* TIMx, uint32_t Time, Timer_CallbackFunction_t Function)
{
    uint16_t period = 0;
    uint16_t prescaler = 0;
    uint32_t clock = Timer_GetClockMax(TIMx);

    if(Time == 0)
    {
        return;
    }

    /*将定时中断时间转换为重装值和时钟分频值*/
    Timer_TimeFactorization(
        Time,
        clock,
        &period,
        &prescaler
    );

    /*定时中断配置*/
    Timer_SetInterruptBase(
        TIMx,
        period,
        prescaler,
        Function,
        TIMER_PREEMPTIONPRIORITY_DEFAULT,
        TIMER_SUBPRIORITY_DEFAULT
    );
}

bool Timer_SetInterruptFreqUpdate(tmr_type* TIMx, uint32_t Freq)
{
    uint16_t period, prescaler;
    uint32_t clock = Timer_GetClockMax(TIMx);
    int32_t error;

    if(Freq == 0)
        return false;

    bool success = Timer_FreqFactorization(
                       Freq,
                       clock,
                       &period,
                       &prescaler,
                       &error
                   );

    if(!success)
    {
        return false;
    }

    tmr_base_init(TIMx, period - 1, prescaler - 1);
    return true;
}

uint32_t Timer_GetClockOut(tmr_type* TIMx)
{
    uint32_t clock = Timer_GetClockMax(TIMx);

    return (clock / ((TIMx->pr + 1) * (TIMx->div + 1)));
}

void Timer_SetInterruptTimeUpdate(tmr_type* TIMx, uint32_t Time)
{
    uint16_t period, prescaler;
    uint32_t clock = Timer_GetClockMax(TIMx);

    Timer_TimeFactorization(
        Time,
        clock,
        &period,
        &prescaler
    );

    tmr_base_init(TIMx, period - 1, prescaler - 1);
}

void Timer_SetInterruptBase(
    tmr_type* TIMx,
    uint16_t Period,
    uint16_t Prescaler,
    Timer_CallbackFunction_t Function,
    uint8_t PreemptionPriority,
    uint8_t SubPriority
)
{
    IRQn_Type TMRx_IRQn = (IRQn_Type)0;
    TIMER_Type TIMERx = TIMER1;

#define TMRx_IRQ_DEF(n,x_IRQn)\
do{\
    if(TIMx == TIM##n)\
    {\
        TIMERx = TIMER##n;\
        TMRx_IRQn = x_IRQn;\
        goto match;\
    }\
}\
while(0)

    /*如果编译器提示：identifier "xxx_IRQn" is undefined
     *把未定义的注释掉即可
     */
    TMRx_IRQ_DEF(1, TMR1_OVF_TMR10_IRQn);
    TMRx_IRQ_DEF(2, TMR2_GLOBAL_IRQn);
    TMRx_IRQ_DEF(3, TMR3_GLOBAL_IRQn);
    TMRx_IRQ_DEF(4, TMR4_GLOBAL_IRQn);
    TMRx_IRQ_DEF(5, TMR5_GLOBAL_IRQn);
    TMRx_IRQ_DEF(6, TMR6_DAC_GLOBAL_IRQn);
    TMRx_IRQ_DEF(7, TMR7_GLOBAL_IRQn);
    TMRx_IRQ_DEF(8, TMR8_OVF_TMR13_IRQn);
    TMRx_IRQ_DEF(9, TMR1_BRK_TMR9_IRQn);
    TMRx_IRQ_DEF(10, TMR1_OVF_TMR10_IRQn);
    TMRx_IRQ_DEF(11, TMR1_TRG_HALL_TMR11_IRQn);
    TMRx_IRQ_DEF(12, TMR8_BRK_TMR12_IRQn);
    TMRx_IRQ_DEF(13, TMR8_OVF_TMR13_IRQn);
    TMRx_IRQ_DEF(14, TMR8_TRG_HALL_TMR14_IRQn);
    TMRx_IRQ_DEF(20, TMR20_OVF_IRQn);

match:

    if(TMRx_IRQn == 0)
    {
        return;
    }

    Timer_CallbackFunction[TIMERx] = Function;

    tmr_reset(TIMx);
    Timer_ClockCmd(TIMx, true);

    tmr_repetition_counter_set(TIMx, 0);
    tmr_cnt_dir_set(TIMx, TMR_COUNT_UP);
    tmr_base_init(TIMx, Period - 1, Prescaler - 1);

    nvic_irq_enable(TMRx_IRQn, PreemptionPriority, SubPriority);

    tmr_flag_clear(TIMx, TMR_OVF_FLAG);
    tmr_interrupt_enable(TIMx, TMR_OVF_INT, TRUE);
}
